Remove 'UI' compilations